add skip build flag

--- a/.github/workflows/npm-release.yml
+++ b/.github/workflows/npm-release.yml
@@ -8,7 +8,7 @@ on:
         required: true
 
     inputs:
-      dryRun:
+      dry_run:
         type: boolean
         description: pass dry-run to semantic-release
         default: false
@@ -17,6 +17,11 @@ on:
         type: string
         description: 'Branch name for node-modules/github-actions, for test purpose'
         default: master
+
+      skip_build:
+        type: boolean
+        description: skip the build step prior to release
+        default: false
 
 jobs:
   Release:
@@ -75,6 +80,7 @@ jobs:
         working-directory: main_repo
 
       - name: Build
+        if: ${{ !inputs.skip_build }}
         run: pnpm run build
         working-directory: main_repo
 
