Revert "latest npm is 11.6.0 with node"
This reverts commit c1a29190df8784b68d8b5ac4a7b029a1ff6def47.

--- a/.github/workflows/npm-release.yml
+++ b/.github/workflows/npm-release.yml
@@ -61,6 +61,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
+
+      # Ensure npm 11.5.1 or later is installed
+      - name: Update npm
+        run: npm install -g npm@latest
       
       - name: Install pnpm
         run: npm install -g pnpm
